Added CV to 180 model

--- a/3_Modelling/Modelling_180.ipynb
+++ b/3_Modelling/Modelling_180.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a985118f",
+   "id": "737b5dcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60d9acd6",
+   "id": "c8945860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cd83c4a8",
+   "id": "bf941552",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e5d6411c",
+   "id": "483d2ec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad1cee83",
+   "id": "dbe1b5be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "73728588",
+   "id": "5acbe741",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8875d1aa",
+   "id": "283687fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,6 @@
     "X_valid = pd.DataFrame(scaler.transform(X_valid.values), columns=X_valid.columns, index=X_valid.index)\n",
     "\n",
     "\n",
-    "\n",
     "X_test = pd.DataFrame(scaler.transform(X_test.values), columns=X_test.columns, index=X_test.index)\n",
     "\n"
    ]
@@ -1236,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "09da8c07",
+   "id": "9b7e3aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7081f8b4",
+   "id": "c3a217cc",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4ea05bb9",
+   "id": "15c8f9fb",
    "metadata": {},
    "outputs": [
     {
@@ -1388,13 +1387,14 @@
     "\n",
     "y_predOrig = xgb_model.predict(X_test)\n",
     "\n",
+    "\n",
     "print(classification_report(y_test, y_predOrig))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9e5dff54",
+   "id": "5cb7023c",
    "metadata": {},
    "outputs": [
     {
@@ -1418,14 +1418,13 @@
     "\n",
     "y_predOrig = xgb_model.predict(X_valid)\n",
     "\n",
-    "\n",
     "print(classification_report(y_valid, y_predOrig))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f04b45f",
+   "id": "f0b46370",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1433,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "116ade49",
+   "id": "a9033bd0",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "86885c60",
+   "id": "4901990b",
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4fcc4431",
+   "id": "cc4e076e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d6c389b",
+   "id": "bd570722",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab9c5b06",
+   "id": "93b7de99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1522,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "94afd033",
+   "id": "1bb05af0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c90cc3ff",
+   "id": "0101b79a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "dd83c819",
+   "id": "22df37fe",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -3391,7 +3390,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e469e92f",
+   "id": "a3cfe634",
    "metadata": {},
    "outputs": [
     {
@@ -3412,7 +3411,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "da8dcc04",
+   "id": "c5fb6a46",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -3547,7 +3546,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "cd6bccd4",
+   "id": "6b113fd6",
    "metadata": {},
    "outputs": [
     {
@@ -3571,13 +3570,14 @@
     "\n",
     "y_predOrig = xgb_model.predict(X_valid)\n",
     "\n",
+    "\n",
     "print(classification_report(y_valid, y_predOrig))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4d242235",
+   "id": "5baded6c",
    "metadata": {},
    "outputs": [
     {
@@ -3606,16 +3606,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32c9e88c",
+   "execution_count": 49,
+   "id": "ee8e3c86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Accuracy is: 90.65% (1.35%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "kFold = StratifiedKFold(n_splits = 5)\n",
+    "res = cross_val_score(xgb_model, X_train_full, y_train_full, cv=kFold)\n",
+    "print(\"The Accuracy is: %.2f%% (%.2f%%)\" % (res.mean()*100, res.std()*100))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c19da39",
+   "id": "6192620f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3625,7 +3648,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "01b5cadc",
+   "id": "f1010cea",
    "metadata": {},
    "outputs": [
     {
@@ -3647,7 +3670,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "948f251b",
+   "id": "190d40d6",
    "metadata": {},
    "outputs": [
     {
@@ -3668,7 +3691,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "3f42f4b8",
+   "id": "f8d64d6b",
    "metadata": {},
    "outputs": [
     {
@@ -3689,7 +3712,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "80109d8c",
+   "id": "8a72ee41",
    "metadata": {},
    "outputs": [
     {
@@ -3710,7 +3733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a75e256",
+   "id": "0ceea1eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3718,7 +3741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9acc145",
+   "id": "6bd88efd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3726,7 +3749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a68afc",
+   "id": "0a832c8a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3734,7 +3757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1618b2",
+   "id": "72100ab9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3742,7 +3765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a3d1d1",
+   "id": "4a5aeae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3752,7 +3775,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "0006d9be",
+   "id": "ef4148d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3762,7 +3785,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "b68ae421",
+   "id": "03d6b445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3772,7 +3795,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "6d32df83",
+   "id": "66c7467c",
    "metadata": {},
    "outputs": [
     {
@@ -3808,7 +3831,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "2eb120b9",
+   "id": "a14d43a2",
    "metadata": {},
    "outputs": [
     {
@@ -3836,7 +3859,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "d838e77a",
+   "id": "b83f7986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3858,7 +3881,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "b084a51e",
+   "id": "1f7c2d00",
    "metadata": {},
    "outputs": [
     {
@@ -4018,7 +4041,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "258d69c7",
+   "id": "84f9bd75",
    "metadata": {},
    "outputs": [
     {
@@ -4040,6 +4063,8 @@
    "source": [
     "\n",
     "y_predOrig = xgb_modelFILTERED.predict(X_test_filtered)\n",
+    "#y_pred_bool = np.argmax(y_pred, axis=1)\n",
+    "#y_pred_bool = pd.get_dummies(y_pred_bool)\n",
     "\n",
     "print(classification_report(y_test_filtered, y_predOrig))"
    ]
@@ -4047,7 +4072,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "386a8f28",
+   "id": "a1b5f21c",
    "metadata": {},
    "outputs": [
     {
@@ -4068,7 +4093,8 @@
    ],
    "source": [
     "y_predOrig = xgb_modelFILTERED.predict(X_valid_filtered)\n",
-    "\n",
+    "#y_pred_bool = np.argmax(y_pred, axis=1)\n",
+    "#y_pred_bool = pd.get_dummies(y_pred_bool)\n",
     "\n",
     "print(classification_report(y_valid_filtered, y_predOrig))"
    ]
@@ -4076,7 +4102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "291b26d7",
+   "id": "85da74a1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4084,7 +4110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae9d034",
+   "id": "bfe7e7d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4094,7 +4120,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f4274fa3",
+   "id": "eb21ad18",
    "metadata": {},
    "outputs": [
     {
@@ -4126,7 +4152,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1b54a5e1",
+   "id": "6088a934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4136,7 +4162,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9e93d5bc",
+   "id": "d2fe01ba",
    "metadata": {},
    "outputs": [
     {
@@ -4159,7 +4185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59066922",
+   "id": "033a80ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4169,7 +4195,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a06fa21a",
+   "id": "d8f2db6b",
    "metadata": {},
    "outputs": [
     {
@@ -4209,7 +4235,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1d75635f",
+   "id": "0644d091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4219,7 +4245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcf0c176",
+   "id": "47cde6ec",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4227,7 +4253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e65327",
+   "id": "d9daebff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4235,7 +4261,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9db0a9de",
+   "id": "a607350a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4245,7 +4271,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bb06ba1b",
+   "id": "94d28239",
    "metadata": {},
    "outputs": [
     {
@@ -4277,7 +4303,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "22a4e19e",
+   "id": "b5248015",
    "metadata": {},
    "outputs": [
     {
@@ -4298,7 +4324,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "40fd17e3",
+   "id": "1f58c3ee",
    "metadata": {},
    "outputs": [
     {
@@ -4328,7 +4354,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "14d8a928",
+   "id": "9bcfc92f",
    "metadata": {},
    "outputs": [
     {
